--- a/Web.Statu/Views/Kindex/Detail.cshtml
+++ b/Web.Statu/Views/Kindex/Detail.cshtml
@@ -318,14 +318,59 @@ else
     <div class="jumbotron">
         <div class="container">
             <h2 style="padding-top:0;margin-top:0;margin-bottom:30px"><b>@firma.Jmeno</b> za rok <b>@ViewBag.SelectedYear</b></h2>
-            <div class="row">
-                <div class="col-sm-2">
-                    @WebKidx.KIndexIconStyle(currYear.KIndexLabel, "width:100px")
+            <div class="row" style="display: flex;align-items: center;">
+                <div class="col-xs-12 col-sm-6">
+
+                    <div class="kmeter" style="padding-top:20px;margin-top:10px;">
+                        <div class="kframe apart">
+                            <div class="kfill">
+                                <div class="textover">A</div>
+                                <div class="kfill afill" style="width: @( kindexMeter(kindexValue,0) )%"></div>
+                            </div>
+                            <div class="kmark" style="left:42px;">@HlidacStatu.Lib.Analysis.KorupcniRiziko.KIndexData.KIndexLimits[1]</div>
+                        </div>
+                        <div class="kframe bpart">
+                            <div class="kfill">
+                                <div class="textover">B</div>
+                                <div class="kfill bfill" style="width: @( kindexMeter(kindexValue,1) )%"></div>
+                            </div>
+                            <div class="kmark" style="left:53px;">@HlidacStatu.Lib.Analysis.KorupcniRiziko.KIndexData.KIndexLimits[2]</div>
+                        </div>
+                        <div class="kframe cpart">
+                            <div class="kfill">
+                                <div class="textover">C</div>
+                                <div class="kfill cfill" style="width: @( kindexMeter(kindexValue,2) )%"></div>
+                            </div>
+                            <div class="kmark" style="left:53px;">@HlidacStatu.Lib.Analysis.KorupcniRiziko.KIndexData.KIndexLimits[3]</div>
+                        </div>
+                        <div class="kframe dpart">
+                            <div class="kfill">
+                                <div class="textover">D</div>
+                                <div class="kfill dfill" style="width: @( kindexMeter(kindexValue,3) )%"></div>
+                            </div>
+                            <div class="kmark" style="left:50px;">@HlidacStatu.Lib.Analysis.KorupcniRiziko.KIndexData.KIndexLimits[4]</div>
+                        </div>
+                        <div class="kframe epart">
+                            <div class="kfill">
+                                <div class="textover">E</div>
+                                <div class="kfill efill" style="width: @( kindexMeter(kindexValue,4) )%"></div>
+                            </div>
+                            <div class="kmark" style="left:48px;">@HlidacStatu.Lib.Analysis.KorupcniRiziko.KIndexData.KIndexLimits[5]</div>
+                        </div>
+                        <div class="kframe fpart">
+                            <div class="kfill">
+                                <div class="textover" style="justify-content: left; left: 23px;">F</div>
+                                <div class="kfill ffill" style="width: @( kindexMeter(kindexValue,5) )%"></div>
+                                <div class="kmark" style="left:213px;">50+</div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
-                <div class="col-sm-10">
-                    <h2>
-                        XXXXX Úsporné a ekonomické hospodaření, vysoká důvěra, transparentnost, zveřejňují i smlouvy do 50 000 Kč
-                    </h2>
+                <div class="col-xs-12 col-sm-6">
+                    <div style="font-size:26px;line-height:30px;">
+                        @Html.Raw( HlidacStatu.Util.InfoFact.RenderInfoFacts(Model.InfoFacts(currYear.Rok),3,true,false,lineFormat:"<div>{0}</div>",html:true))
+                    </div>
                 </div>
             </div>
             @if (Model.roky.Any(m => m.KIndexReady))
