--- a/Web.Statu/Views/Kindex/Debug.Start.cshtml
+++ b/Web.Statu/Views/Kindex/Debug.Start.cshtml
@@ -21,18 +21,18 @@
 {
     <ol class="breadcrumb">
         <li><a href="/">Hlídač Státu</a></li>
-        <li>K-Index</li>
+        <li>K–Index</li>
         <li class="active">@ViewBag.Title</li>
     </ol>
 }
 
 <div class="row">
     <div class="col-xs-12 col-sm-12">
-        <h4>K-Index pro jednu organizaci</h4>
+        <h4>K–Index pro jednu organizaci</h4>
         <form method="get" action="/kindex/debug" class="form-search__input-wrapper" role="form">
 
             <input class="form-search__input" id="id" name="id" value="" placeholder="IČO organizace " style="max-width: none;" type="text">
-            <button class="form-search__btn" type="submit">K-Index pro jednu organizaci</button>
+            <button class="form-search__btn" type="submit">K–Index pro jednu organizaci</button>
         </form>
     </div>
 </div>
@@ -40,11 +40,11 @@
 <hr style="width:40%" />
 <div class="row">
     <div class="col-xs-12 col-sm-12">
-        <h4>Porovnat K-Index pro více organizací</h4>
+        <h4>Porovnat K–Index pro více organizací</h4>
         <form method="get" action="/kindex/debug/porovnat" class="form-search__input-wrapper" role="form">
 
             <input class="form-search__input" id="ico" name="ico" value="" placeholder="IČ organizací, oddelené čárkami, mezerou, středníkem " style="max-width: none;" type="text">
-            <button class="form-search__btn" type="submit">Porovnat K-Index pro více organizací</button>
+            <button class="form-search__btn" type="submit">Porovnat K–Index pro více organizací</button>
         </form>
     </div>
 </div>
