--- a/Web.Statu/Views/Kindex/Index.cshtml
+++ b/Web.Statu/Views/Kindex/Index.cshtml
@@ -6,7 +6,7 @@
 @using HlidacStatu.Web.Models;
 
 @{
-    ViewBag.Title = "K-Index";
+    ViewBag.Title = "K–Index";
 }
 
 
@@ -220,7 +220,7 @@
     <label for="show"><i style="font-size:2em;" class="far fa-info-square"></i></label>
 
     <p class="infoshowhide">
-        Ukazatel známky hodnocení K-indexu.
+        Ukazatel známky hodnocení K–Indexu.
         Celková hodnota je spočítána jako součet všech hodnot ve sloupci "Mezisoučet" v tabulce.<br />
         Tuto sečtenou hodnotu porovnáváme následovně: <br />
         "A" = Celková hodnota < 3 <br />
@@ -432,7 +432,7 @@
         <strong>Váha</strong> - pevná hodnota, kterou jsme určili pro danou kategorii <br />
         <strong>Základní hodnota</strong> - hodnota vypočítaná ze smluv v dané kategorii <br />
         <strong>Mezisoučet</strong> - číslo získané vynásobením <strong>Váha</strong> * <strong>Základní hodnota</strong> <br />
-        Součet všech mezisoučtů udává číslo použité pro výsledné určení známky K-indexu.<br />
+        Součet všech mezisoučtů udává číslo použité pro výsledné určení známky K–Indexu.<br />
         <strong>grafík</strong> - určuje jak moc je daná kategorie zastoupena v celkovém hodnocení vůči ostatním kategoriím. <br />
         Barva grafíku určuje, jak je na tom organizace v porovnání s ostatními organizacemi. <br />
         Modrá = v dané kategorii si vede dobře <br />
