--- a/Web.Statu/Views/Kindex/Zebricek.Index.cshtml
+++ b/Web.Statu/Views/Kindex/Zebricek.Index.cshtml
@@ -7,7 +7,7 @@
 
 @{
 
-    ViewBag.Title = "Porovnání K-Index pro různé skupiny subjektů";
+    ViewBag.Title = "Porovnání K–Index pro různé skupiny subjektů";
     ViewBag.HideTitle = true;
 
 }
@@ -21,7 +21,7 @@
 {
     <ol class="breadcrumb">
         <li><a href="/">Hlídač Státu</a></li>
-        <li>K-Index</li>
+        <li>K–Index</li>
         <li class="active">@ViewBag.Title</li>
     </ol>
 }
