--- a/Web.Statu/Views/Kindex/Detail.cshtml
+++ b/Web.Statu/Views/Kindex/Detail.cshtml
@@ -300,7 +300,7 @@
 
                                 if (kidx != null && kidx.KIndexReady && year != selectedYear)
                                 {
-                                    <span><a href="@ViewBag.ICO?rok=@year">@WebKidx.KIndexIconStyle(kidx.KIndexLabel, "padding-left:6px;height:18px") v @year</a>@(postfix)</span>
+                                    <span><a href="@ViewBag.ICO?rok=@year">@Html.KIndexIcon(kidx.KIndexLabel, "padding-left:6px;height:18px") v @year</a>@(postfix)</span>
 
                                 }
                             }
@@ -320,7 +320,7 @@ else
             <h2 style="padding-top:0;margin-top:0;margin-bottom:30px"><a href="/subjekt/@Model.Ico"><b>@firma.Jmeno</b></a> za rok <b>@ViewBag.SelectedYear</b></h2>
             <div class="row" style="display: flex;align-items: center;">
                 <div class="col-sm-2">
-                    @WebKidx.KIndexIconStyle(currYear.KIndexLabel, "width:100px")
+                    @Html.KIndexIcon(currYear.KIndexLabel, "width:100px")
                 </div>
                 <div class="col-sm-10">
                     <div style="font-size:26px;line-height:30px;">
@@ -347,7 +347,7 @@ else
 
                                 if (kidx != null && kidx.KIndexReady && year != selectedYear)
                                 {
-                                    <span><a href="@ViewBag.ICO?rok=@year">@WebKidx.KIndexIconStyle(kidx.KIndexLabel, "padding-left:6px;height:18px") v @year</a>@(postfix)</span>
+                                    <span><a href="@ViewBag.ICO?rok=@year">@Html.KIndexIcon(kidx.KIndexLabel, "padding-left:6px;height:18px") v @year</a>@(postfix)</span>
 
                                 }
                             }
@@ -376,13 +376,13 @@ else
         které jsou spojeny s nehospodárným nakládáním s veřejnými penězi a rizikem korupce.
     </p>
     <p>
-        Organizace s K–Indexem @WebKidx.KIndexIcon(KIndexData.KIndexLabelValues.A, "15px") jsou nejlepší, nejvíce transparentní a s nejnižšími riziky.
-        Organizace s K–Index @WebKidx.KIndexIcon(KIndexData.KIndexLabelValues.F, "15px") patří mezi nejhorší.
+        Organizace s K–Indexem @Html.KIndexIcon(KIndexData.KIndexLabelValues.A,15) jsou nejlepší, nejvíce transparentní a s nejnižšími riziky.
+        Organizace s K–Index @Html.KIndexIcon(KIndexData.KIndexLabelValues.F, 15) patří mezi nejhorší.
 
     </p>
     <p>
         Stupnice K–Indexu
-        @WebKidx.KIndexIcon(KIndexData.KIndexLabelValues.A, "15px")@WebKidx.KIndexIcon(KIndexData.KIndexLabelValues.B, "15px")@WebKidx.KIndexIcon(KIndexData.KIndexLabelValues.C, "15px")@WebKidx.KIndexIcon(KIndexData.KIndexLabelValues.D, "15px")@WebKidx.KIndexIcon(KIndexData.KIndexLabelValues.E, "15px")@ViewBag.Title
+        @Html.KIndexIcon(KIndexData.KIndexLabelValues.A,15)@Html.KIndexIcon(KIndexData.KIndexLabelValues.B, 15)@Html.KIndexIcon(KIndexData.KIndexLabelValues.C, 15)@Html.KIndexIcon(KIndexData.KIndexLabelValues.D, 15)@Html.KIndexIcon(KIndexData.KIndexLabelValues.E, 15)@Html.KIndexIcon(KIndexData.KIndexLabelValues.F, 15) @ViewBag.Title
         je hrubá pro snadnou přehlednost, pro podrobnější srovnání a porovnání vždy ukazujeme i přesnou číselnou hodnotu K–Indexu a také způsob jeho výpočtu.
     </p>
 </div>
@@ -401,7 +401,7 @@ else
     <div class="col-xs-12 col-sm-6">
         <div>
             Celková hodnota K–Indexu je <strong>@kindexValue.ToString("F2") bodů</strong>. To odpovídá výsledné známce
-            @WebKidx.KIndexIcon(currYear.KIndexLabel, "15px") a @(statistics.PercIntervalShortText(currYear.KIndex))
+            @Html.KIndexIcon(currYear.KIndexLabel,15) a @(statistics.PercIntervalShortText(currYear.KIndex))
             (@statistics.SubjektRank(Model.Ico)).
 
         </div>
@@ -454,7 +454,7 @@ else
 </div>
 <div class="bs-callout bs-callout-success" style="margin-bottom:50px;">
     <p>
-        Obdobně jako u písmenného vyjádření, kde @WebKidx.KIndexIcon(KIndexData.KIndexLabelValues.A, "15px") je nejlepší hodnocení,
+        Obdobně jako u písmenného vyjádření, kde @Html.KIndexIcon(KIndexData.KIndexLabelValues.A, 15) je nejlepší hodnocení,
         v číselném vyjádření je nejlepší hodnota <b>0</b>.
         Nejhorší hodnota může být teoreticky 120, fakticky jen zřídka překročí hodnotu <b>50</b>.
     </p>
@@ -475,7 +475,7 @@ else
                     <td style="font-size: 15px; text-align: right">
                         <b>Hodnota parametru</b>
                     </td>
-                    <td style="font-size: 15px; text-align: right">
+                    <td style="font-size: 15px;">
                         <b>Komentář</b>
                     </td>
                 </tr>
