kindex small fixes

--- a/Web.Statu/Views/Kindex/Zebricek.cshtml
+++ b/Web.Statu/Views/Kindex/Zebricek.cshtml
@@ -100,7 +100,7 @@
                         <td class="number">
                             @if (record.item.Value4Sort == HlidacStatu.Lib.Analysis.KorupcniRiziko.Consts.MinSmluvPerYearKIndexValue)
                             {
-                            <span>Není k dispozici</span>
+                            <span>Není pro tento rok k dispozici</span>
                             }
                             else
                             {
